<resources>
    <string name="app_name">Abigail05</string>
    <string name="btnver">ver+</string>
    <string name="btnverprecio">Comprar</string>
    <string name="verxprod">producto</string>
    <string name="verhome">home</string>
    <string name="verxmarca">marca</string>
    <string name="enviar">enviar</string>
    <string name="consulta">Consultanos</string>
    <string name="consultatxt">Estamos para ayudarte.</string>
    <string name="mailok">Gracias por tu mail, nos pondremos en contacto a la brevedad…</string>
    <string name="porencargotxt">Venta solo por encargo</string>
    <string name="txtnosotros">nosotros…</string>
    <string name="txtlocal">nuestro local</string>
    <string name="txtweb">en la web</string>
    <string name="txtdireccion">Av. Asamblea 364 local 1 (C.P. 1424) | Barrio Parque Chacabuco | C.A.B.A.</string>
    <string name="txtelefono">011 4921 9301</string>
    <string name="txthorarionormal">Lunes a Viernes 9:30 hs. a 14 hs. | 17 hs. a 19:30 hs.</string>
    <string name="txthorariosabado">Sábados 9:30 hs. a 14 hs.</string>
    <string name="txthorariocerrado">Domingos y feriados cerrado</string>
    <string name="txthistoria">Historia\n
ABIGAIL05 nace en el año 2005 como un proyecto familiar. Gracias al esfuerzo, compromiso, dedicacion y a todos ustedes que han confiado en nosotros al adquirir nuestros productos, vamos creciendo dia a dia.\n\n
Nuestra constante en el esfuerzo por brindar el mejor servicio al cliente, logramos tener del portal mas grande de Argentina del comercio en internet, MercadoLibre, una certificacion a la excelencia y servicio al cliente.\n\n
Somos una empresa seria y comprometida, tomando importancia a todos los aspectos del proceso de venta.\n\n
Desde ya esperamos con agrado su consulta y que pueda elegirnos en el momento de su compra.\n
Muchas gracias!</string>
    <string name="txtml">Mercado Libre</string>
    <string name="txtwebpage">Página Web</string>
    <string name="txtfacebook">Facebook</string>
    <string name="AMprodabi">Productos Abigail05</string>
    <string name="AMtxtdesc">Conocé nuestros productos</string>
    <string name="AMbuscaprod">Buscá por producto</string>
    <string name="AMtxtdescxprod">Almohadones, mamaderas, chupetes y mucho más…</string>
    <string name="AMbuscamarca">Buscá por marca</string>
    <string name="AMtxtdescxmarca">Avent, Chicco, Babelito y mucho más…</string>
    <string name="spprovincias">Seleccioná una provincia</string>
    <string-array name="provincias">
        <item>Seleccioná una provincia…</item>
        <item>Buenos Aires</item>
        <item>C.A.B.A.</item>
        <item>Catamarca</item>
        <item>Córdoba</item>
        <item>Corrientes</item>
        <item>Chaco</item>
        <item>Chubut</item>
        <item>Entre Ríos</item>
        <item>Formosa</item>
        <item>Jujuy</item>
        <item>La Pampa</item>
        <item>La Rioja</item>
        <item>Mendoza</item>
        <item>Misiones</item>
        <item>Neuquén</item>
        <item>Río Negro</item>
        <item>Salta</item>
        <item>San Juan</item>
        <item>San Luis</item>
        <item>Santa Cruz</item>
        <item>Santa Fe</item>
        <item>Santiago del Estero</item>
        <item>Tucumán</item>
    </string-array>
    <string name="txtcombo">Combo Almohadón para Amamantar</string>
    <string name="txtlista1">Almohadones</string>
    <string name="txtlista1desc">Almohadones para amamantar</string>
    <string name="txtlista2">Niditos y cuellitos</string>
    <string name="txtlista2desc">Niditos de contención y cuellitos de descanso</string>
    <string name="txtlista3">Colchoncitos para cochecitos</string>
    <string name="txtlista3desc">Colchoncitos para cochecitos y cuellitos cervicales</string>
    <string name="txtcombo1desc">Almohadón, Almohada de Cuna y Cuellito. 12 Colores Disponibles</string>
    <string name="txtcombo2desc">Almohadón, Almohada de Cuna, Cuellito y Nidito de Contención. 12 colores disponibles</string>
    <string name="txtcombo3desc">Almohadón Grande y Nidito de Contención</string>
    <string name="txtcombo4desc">+ Manta con Gorrito de Polar Personalizada</string>
    <string name="txtcolores">Clic sobre las vistas</string>
    <string name="txtalmohada1">Almohada</string>
    <string name="txtalmohada1desc">Almohada 1 plaza vellón siliconado extra soft</string>
    <string name="txtalmohada1desc1">Almohada 1 plaza super rellenas material vellón siliconado extra soft. Confeccionada en friselina.</string>
    <string name="txtfular1">Fular elástico</string>
    <string name="txtfular1desc">Fular elástico varios colores</string>
    <string name="txtfular1desc1">Fular elástico varios colores: gris, rojo, turquesa, verde agua oscuro y negro</string>
    <string name="txtmanta1">Mantas y gorritos</string>
    <string name="txtmanta1desc">Mantas y gorritos. Varios colores</string>
    <string name="txtmanta1desc1">Manta con nombre bordado y gorrito de polar. Varios colores</string>
    <string name="stock">Consultá stock</string>
    <string name="modelo1">vista 1</string>
    <string name="modelo2">vista 2</string>
    <string name="modelo3">vista 3</string>
    <string name="modelo4">vista 4</string>
    <string name="modelo5">vista 5</string>
    <string name="modelo6">vista 6</string>
    <string name="modelo7">vista 7</string>
    <string name="txtNiditoPrincipal">Nidito de contención</string>
    <string name="txtNiditoPrincipaldesc">Nidito de contención y cuellito de descanso cervical en 12 colores disponibles</string>
    <string name="txtCuellitoPrincipal">Cuellito de descanso cervical para bebé</string>
    <string name="txtCuellitoPrincipaldesc">Cuellito de descanso cervical para bebé. Varios colores y diseños.</string>
    <string name="txtCuellitoPrincipalAdulto">Cuello de descanso cervical para adulto</string>
    <string name="txtCuellitoPrincipaldescAdulto">Cuello de descanso cervical para adulto. Varios colores y diseños.</string>
    <string name="txtColchonPrincipal">Colchoncito cubre cochecito más cuellito cervical</string>
    <string name="txtColchonPrincipaldesc">Colchoncito cubre cochecito más cuellito cervical. Varios colores y diseños. Consultanos.</string>
    <string name="txtpilimmarca">Pilim</string>
    <string name="txtpiliprod">Bolsos maternales</string>
    <string name="txtpili1principal">Bolso maternal</string>
    <string name="txtpilim1desc">Bolso art.4627. Rojo doble fuelle unisex</string>
    <string name="txtpili2principal">Cartera</string>
    <string name="txtpili2desc">Cartera art.5913 para Mamá lona lisa cambiador</string>
    <string name="txtpili3principal">Cartera</string>
    <string name="txtpili3desc">Cartera art. 5912 para Mamá lona lisa cambiador</string>
    <string name="txtmibesmarca">mibes</string>
    <string name="txtmibesprod">Ropa y accesorios para bebés</string>
    <string name="txtmibes1principal">Bolso maternal</string>
    <string name="txtmibes1desc">Bolso art. 1016948 rectangular de símil jean con bordado "Spring and Sea"</string>
    <string name="txtmibes2principal">Bolso maternal</string>
    <string name="txtmibes2desc">Bolso art. 2016159 eco-cuero grande c/bordado. Colores: negro o rojo"</string>
    <string name="txtmibesbaberos">Baberos</string>
    <string name="txtmibesbaberosdesc">Baberos tres telas, impermeables y más…</string>
    <string name="txtmibesbaberos1">ARTICULO 1002563 Babero tres telas con portachupete e interior impermeable y abrojo. Variantes: Rosa, Celeste y Azul</string>
    <string name="txtmibesbaberos2">ARTICULO 1002556 Babero tres telas con interior impermeable "Soy grande"</string>
    <string name="txtmibesbaberos3">ARTICULO 1002545 Babero sublimado "Amiguitos de tela"</string>
    <string name="txtmibesbaberos4">ARTICULO 1002537 Babero grande estampado "Mis Pequeños Amigos"</string>
    <string name="txtmibesbaberos5">ARTICULO 1002567 Babero con abrojo estampado "Animales Coloridos"</string>
    <string name="txtmibesbaberos6">ARTICULO 0002068 Babero chico estampado caritas "Tweety - Tazz - Lucas"</string>
    <string name="txtmibesbaberos7">ARTICULO 0002069 Babero estampado caritas "Bugs - Lola" con abrojo</string>
    <string name="txtmibesbaberos8">ARTICULO 1004516 Babetal plástico transparente con mangas y bolsillo, varios colores</string>
    <string name="txtmibesaccesorios">Accesorios</string>
    <string name="txtmibesaccesoriosdesc">Protectores de lluvia, guardapañal, cambiador y más…</string>
    <string name="txtmibesaccesorios1">ARTICULO 1021006 Protector de lluvia plástico</string>
    <string name="txtmibesaccesorios2">ARTICULO 1011029 Guarda Pañal "Hada y Principe" Colores: Celeste, Rosa, Verde Manzana, Rojo, Lila</string>
    <string name="txtmibesaccesorios3">ARTICULO 1006552 Toallón con capucha sublimada y terminación en bies "Monstruitos"</string>
    <string name="txtmibesaccesorios4">ARTICULO 1018092 Cambiador "Hada y Principe" Colores: Celeste, Rosa, Verde Manzana, Rojo</string>
    <string name="txtmibesaccesorios5">ARTICULO 1016954 Bolso en microfibra y estampado en relieve, colores varios</string>
    <string name="txtmibesaccesorios6">ARTICULO 1019064 Mochila Porta Bebe "Hada y Principe" Colores: Celeste, Rosa, Verde Manzana, Rojo y Lila</string>
    <string name="txtmibescatres">Catres</string>
    <string name="txtmibescatresdesc">Catres con cobertor, portatul, base de madera</string>
    <string name="txtmibescatres1">ART 1001322 Catre mibes con cobertor y portatul en base de madera, estampa - Hada y Príncipe</string>
    <string name="txtmibescatres2">ART 1001341 Catre mibes con cobertor y portatul en base de madera, estampa - Bosque de fantasía</string>
    <string name="txtmibescatres3">ART 1001350 Catre mibes con cobertor y portatul en base de madera, estampa - Mi mundo de sueños</string>
    <string name="txtmibescatres4">ART 1025101 Catre mibes con cobertor y portatul en base de madera, con cobertor estampado - Spring &amp; Sea</string>
    <string name="txtmibescatres5">ART 1025102 Catre mibes con cobertor y portatul en base de madera laqueada - Spring &amp; Sea</string>
    <string name="txtmibescatres6">ART 1025105 Catre mibes con cobertor y portatul en base de madera laqueada - Little Baby</string>
    <string name="txtmibescatres7">ART 1025111 Catre mibes con cobertor y portatul en base de madera laqueada - Pequeños soñadores</string>
    <string name="txtmibescatres8">ART 2001317 Catre Petit Baby con cobertor y portatul en base de madera laqueada, bordado - Pareja de ositos</string>
    <string name="txtchiccomamaderas">Mamaderas y accesorios</string>
    <string name="txtchiccomamaderasdesc">Mamaderas, tetinas, chupetes, vasos y más…</string>
    <string name="txtchiccohigiene">Higiene y protección</string>
    <string name="txtchiccohigienedesc">Humidificador, alfombras, esquineros y más…</string>
    <string name="txtchiccosilla">Sillas</string>
    <string name="txtchiccosilladesc">Sillas fijas, pocket, snack</string>
    <string name="txtchiccoduotrio">Cochecitos</string>
    <string name="txtchiccoduotriodesc">Línea duos y tríos</string>
    <string name="txtchiccoultra">Cochecitos</string>
    <string name="txtchiccoultradesc">Línea ultralivianos</string>
    <string name="txtchiccoultra1">Chicco LiteWay2. Disponible en varios colores. El LiteWay2 es un cochecito funcional y moderno, perfecto para que te acompañe a pasear todos los días. Los detalles brillantes, terminaciones en cuero ecológico y corte clásico hacen del LiteWay2 un accesorio para exhibir en las salidas con tu bebé! LiteWay2 ofrece todas las características y accesorios que necesitás para pasear con total comodidad. Ágil y fácil de manejar, incluso en espacios reducidos, es ideal para las salidas por la ciudad!</string>
    <string name="txtchiccotwin">Cochecitos</string>
    <string name="txtchiccotwindesc">Línea mellizos</string>
</resources>