<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chiccoultra1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    tools:context="com.abigail05.Chicco.chiccoultra1">

    <Button
        android:id="@+id/btnhome"
        style="@style/btnhome" />

    <Button
        android:id="@+id/btnvmarca"
        style="@style/btnmarca" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnhome">

        <LinearLayout
            style="@style/LinearCard">

            <android.support.v7.widget.CardView
                style="@style/card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/chiccoultra1imgnaranja"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/chiccoultra1imglila"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/chiccoultra1imgrojo"
                        android:layout_width="match_parent"
                        android:layout_height="280dp" />

                    <TextView
                        android:id="@+id/txtcolores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chiccoultra1imgrojo"
                        android:layout_margin="8dp"
                        android:padding="6dp"
                        android:text="@string/txtcolores"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/modelo1"
                        style="@style/txtvistas"
                        android:layout_below="@id/txtcolores"
                        android:onClick="modelo1"
                        android:text="@string/modelo1" />

                    <TextView
                        android:id="@+id/modelo2"
                        style="@style/txtvistas"
                        android:layout_below="@id/txtcolores"
                        android:layout_centerHorizontal="true"
                        android:onClick="modelo2"
                        android:text="@string/modelo2" />

                    <TextView
                        android:id="@+id/modelo3"
                        style="@style/txtvistas"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/txtcolores"
                        android:onClick="modelo3"
                        android:text="@string/modelo3" />

                    <View
                        android:id="@+id/view1"
                        style="@style/Divider"
                        android:layout_below="@id/modelo1" />

                    <TextView
                        android:id="@+id/txtchiccoultra1principal"
                        style="@style/txtcardprinc"
                        android:layout_below="@id/view1"
                        android:text="@string/txtchiccoultra" />

                    <TextView
                        android:id="@+id/chiccoultra1txtdesc"
                        style="@style/txtcarddesc"
                        android:layout_below="@id/txtchiccoultra1principal"
                        android:text="@string/txtchiccoultra1" />

                    <View
                        android:id="@+id/view2"
                        style="@style/Divider"
                        android:layout_below="@id/chiccoultra1txtdesc" />

                    <Button
                        android:id="@+id/btnconsulta"
                        style="@style/btnstock"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/view2"
                        android:text="@string/stock" />

                    <Button
                        android:id="@+id/btncomprachiccoultra1"
                        style="@style/btncomprar"
                        android:layout_below="@id/view2"
                        android:layout_toRightOf="@id/btnconsulta"
                        android:text="@string/btnverprecio" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
