<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_abriprodlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    tools:context="com.abigail05.Abigail.abiprodlist">

    <Button
        android:id="@+id/btnhome"
        style="@style/btnhome" />

    <Button
        android:id="@+id/btnvmarca"
        style="@style/btnmarca" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnhome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp">

                <ImageView
                    android:id="@+id/lista1img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/txtlista1principal"
                    style="@style/txtprincipal"
                    android:layout_toRightOf="@id/lista1img"
                    android:text="@string/txtlista1" />

                <TextView
                    android:id="@+id/lista1txtdesc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtlista1principal"
                    android:layout_toRightOf="@id/lista1img"
                    android:text="@string/txtlista1desc" />

                <Button
                    android:id="@+id/btnlista1"
                    style="@style/btnvermas"
                    android:layout_below="@+id/lista1txtdesc" />

                <View
                    android:id="@+id/view1"
                    style="@style/Divider"
                    android:layout_below="@id/btnlista1" />

                <ImageView
                    android:id="@+id/lista2img"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/view1" />

                <TextView
                    android:id="@+id/txtlista2principal"
                    style="@style/txtprincipal"
                    android:layout_below="@id/view1"
                    android:layout_toRightOf="@id/lista2img"
                    android:text="@string/txtlista2" />

                <TextView
                    android:id="@+id/lista2txtdesc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtlista2principal"
                    android:layout_toRightOf="@id/lista2img"
                    android:text="@string/txtlista2desc" />

                <Button
                    android:id="@+id/btnlista2"
                    style="@style/btnvermas"
                    android:layout_below="@+id/lista2txtdesc" />

                <View
                    android:id="@+id/view2"
                    style="@style/Divider"
                    android:layout_below="@id/btnlista2" />

                <ImageView
                    android:id="@+id/lista3img"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/view2" />

                <TextView
                    android:id="@+id/txtlista3principal"
                    style="@style/txtprincipal"
                    android:layout_below="@id/view2"
                    android:layout_toRightOf="@id/lista3img"
                    android:text="@string/txtlista3" />

                <TextView
                    android:id="@+id/lista3txtdesc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtlista3principal"
                    android:layout_toRightOf="@id/lista3img"
                    android:text="@string/txtlista3desc" />

                <Button
                    android:id="@+id/btnlista3"
                    style="@style/btnvermas"
                    android:layout_below="@+id/lista3txtdesc" />

                <View
                    android:id="@+id/view3"
                    style="@style/Divider"
                    android:layout_below="@id/btnlista3" />

                <ImageView
                    android:id="@+id/almohada1"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/view3" />

                <TextView
                    android:id="@+id/txtalmohada1"
                    style="@style/txtprincipal"
                    android:layout_below="@id/view3"
                    android:layout_toRightOf="@id/almohada1"
                    android:text="@string/txtalmohada1" />

                <TextView
                    android:id="@+id/txtalmohada1desc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtalmohada1"
                    android:layout_toRightOf="@id/almohada1"
                    android:text="@string/txtalmohada1desc" />

                <Button
                    android:id="@+id/btnalmohada1"
                    style="@style/btnvermas"
                    android:layout_below="@+id/txtalmohada1desc" />

                <View
                    android:id="@+id/view4"
                    style="@style/Divider"
                    android:layout_below="@id/btnalmohada1" />

                <ImageView
                    android:id="@+id/fular1"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/view4" />

                <TextView
                    android:id="@+id/txtfular1"
                    style="@style/txtprincipal"
                    android:layout_below="@id/view4"
                    android:layout_toRightOf="@id/fular1"
                    android:text="@string/txtfular1" />

                <TextView
                    android:id="@+id/txtfular1desc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtfular1"
                    android:layout_toRightOf="@id/fular1"
                    android:text="@string/txtfular1desc" />

                <Button
                    android:id="@+id/btnfular1"
                    style="@style/btnvermas"
                    android:layout_below="@+id/txtfular1desc" />

                <View
                    android:id="@+id/view5"
                    style="@style/Divider"
                    android:layout_below="@id/btnfular1" />

                <ImageView
                    android:id="@+id/manta1"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/view5" />

                <TextView
                    android:id="@+id/txtmanta1"
                    style="@style/txtprincipal"
                    android:layout_below="@id/view5"
                    android:layout_toRightOf="@id/manta1"
                    android:text="@string/txtmanta1" />

                <TextView
                    android:id="@+id/txtmanta1desc"
                    style="@style/txtdesc"
                    android:layout_below="@id/txtmanta1"
                    android:layout_toRightOf="@id/manta1"
                    android:text="@string/txtmanta1desc" />

                <Button
                    android:id="@+id/btnmanta1"
                    style="@style/btnvermas"
                    android:layout_below="@+id/txtmanta1desc" />

                <View
                    android:id="@+id/view6"
                    style="@style/Divider"
                    android:layout_below="@id/btnmanta1" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>