<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chiccoprodlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    tools:context="com.abigail05.Chicco.chiccoprodlist">

    <Button
        android:id="@+id/btnhome"
        style="@style/btnhome" />

    <Button
        android:id="@+id/btnvmarca"
        style="@style/btnmarca" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnhome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp">

                <ImageView
                    android:id="@+id/chiccomamaderas"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccomamaderas"
                    android:layout_toRightOf="@id/chiccomamaderas"
                    android:text="@string/txtchiccomamaderas"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccomamaderasdesc"
                    android:layout_below="@id/txtchiccomamaderas"
                    android:layout_toRightOf="@id/chiccomamaderas"
                    android:text="@string/txtchiccomamaderasdesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccomamaderas"
                    android:layout_below="@id/txtchiccomamaderasdesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view1"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccomamaderas" />

                <ImageView
                    android:id="@+id/chiccohigiene"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/view1"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccohigiene"
                    android:layout_below="@id/view1"
                    android:layout_toRightOf="@id/chiccohigiene"
                    android:text="@string/txtchiccohigiene"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccohigienedesc"
                    android:layout_below="@id/txtchiccohigiene"
                    android:layout_toRightOf="@id/chiccohigiene"
                    android:text="@string/txtchiccohigienedesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccohigiene"
                    android:layout_below="@id/txtchiccohigienedesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view2"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccohigiene" />

                <ImageView
                    android:id="@+id/chiccosilla"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/view2"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccosilla"
                    android:layout_below="@id/view2"
                    android:layout_toRightOf="@id/chiccosilla"
                    android:text="@string/txtchiccosilla"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccosilladesc"
                    android:layout_below="@id/txtchiccosilla"
                    android:layout_toRightOf="@id/chiccosilla"
                    android:text="@string/txtchiccosilladesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccosilla"
                    android:layout_below="@id/txtchiccosilladesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view3"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccosilla" />

                <ImageView
                    android:id="@+id/chiccoduotrio"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/view3"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccoduotrio"
                    android:layout_below="@id/view3"
                    android:layout_toRightOf="@id/chiccoduotrio"
                    android:text="@string/txtchiccoduotrio"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccoduotriodesc"
                    android:layout_below="@id/txtchiccoduotrio"
                    android:layout_toRightOf="@id/chiccoduotrio"
                    android:text="@string/txtchiccoduotriodesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccoduotrio"
                    android:layout_below="@id/txtchiccoduotriodesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view4"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccoduotrio" />

                <ImageView
                    android:id="@+id/chiccoultra"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/view4"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccoultra"
                    android:layout_below="@id/view4"
                    android:layout_toRightOf="@id/chiccoultra"
                    android:text="@string/txtchiccoultra"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccoultradesc"
                    android:layout_below="@id/txtchiccoultra"
                    android:layout_toRightOf="@id/chiccoultra"
                    android:text="@string/txtchiccoultradesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccoultra"
                    android:layout_below="@id/txtchiccoultradesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view5"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccoultra" />

                <ImageView
                    android:id="@+id/chiccotwin"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/view5"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/txtchiccotwin"
                    android:layout_below="@id/view5"
                    android:layout_toRightOf="@id/chiccotwin"
                    android:text="@string/txtchiccotwin"
                    style="@style/txtprincipal" />

                <TextView
                    android:id="@+id/txtchiccotwindesc"
                    android:layout_below="@id/txtchiccotwin"
                    android:layout_toRightOf="@id/chiccotwin"
                    android:text="@string/txtchiccotwindesc"
                    style="@style/txtdesc" />

                <Button
                    android:id="@+id/btnchiccotwin"
                    android:layout_below="@id/txtchiccotwindesc"
                    android:text="@string/btnver"
                    style="@style/btnvermas" />

                <View
                    android:id="@+id/view6"
                    style="@style/Divider"
                    android:layout_below="@id/btnchiccotwin" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
